package mx.uaemex.fi.dto;

public record LoginRequest(String correo, String password) {
}
